<resources>

    <string name="app_name">TemaBet</string>

    <!--labels-->
    <string name="password_label">Password</string>
    <string name="amount_input_label">Amount:‎</string>
    <string name="horse_input_label">Horse number:</string>
    <string name="bet_details_label">Some day and some time </string>

    <!-- Buttons-->
    <string name="button_bet_name">Bet</string>
    <string name="button_sign_in_name">Sign in</string>

    <!-- Image descriptions-->
    <string name="horse_image_description">horse image</string>

    <!-- Hints-->
    <string name="login_hint">username</string>
    <string name="password_hint">password</string>
    <string name="bet_amount_hint">999123</string>
    <string name="horse_number_hint">6</string>


    <!-- ServerUrl and handlers endpoints-->
    <string name="serverUrl">192.168.0.108:8080</string>
    <string name="loginHandler">/user/login</string>

    <!-- list items default values-->
    <string name="default_horse_number">1</string>
    <string name="default_coefficient">1.5x</string>
    <string name="default_horse_name">Horse Name</string>
    <string name="default_horse_winRate">0.65%</string>
    <string name="default_race_number">race number</string>
    <string name="default_place">somewhere</string>
    <string name="default_time">sometime</string>

<!--    <string name="race_number"><b>#</b> %1$i</string>-->
    <string name="horse_race_number"><b>#</b> %1$d</string>
    <!-- still don't know how to add % to a string resource so the second arg is string-->
    <string name="win_rate">%1$d %2$s</string>
    <string name="coefficient">%1$d <b>x</b></string>

    <string name="hryvnia_symbol">₴‎</string>

</resources>
