<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/PrimaryLayoutStyle">

    <androidx.cardview.widget.CardView
        android:id="@+id/runCardContainer"
        style="@style/PrimaryLayoutStyle"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/cardBackground"
        tools:ignore="MissingConstraints" >

        <RelativeLayout
            style="@style/PrimaryLayoutStyle"
            android:background="@color/cardBackground"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/dateAndTimeText"
                style="@style/TextViewSmall"
                android:text="@string/default_time" />

            <TextView
                android:id="@+id/placeText"
                style="@style/TextViewMedium"
                android:layout_below="@id/dateAndTimeText"
                android:layout_centerHorizontal="true"
                android:text="@string/default_place" />

            <TextView
                android:id="@+id/raceNumberText"
                style="@style/TextViewSmall"
                android:layout_alignParentEnd="true"
                android:text="@string/default_race_number" />

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/cardBackground"
                android:id="@+id/horsesRunList"
                style="@style/PrimaryLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeText"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>